# cobol-esql-precompiler

./: README.md
Open-COBOL-ESQL-1.4/: GUIDE.md  TODO.md  configure~
Open-COBOL-ESQL-1.4/dblib/: Makefile.am
Open-COBOL-ESQL-1.4/ocesql/: lex.yy.c  scanner.l
Open-COBOL-ESQL-1.4/sample/: FETCHTBL
